# PJCPROJ

./: CMakeLists.txt  GamePlay.cpp  GamePlay.h  GamePlayInfo.cpp  GamePlayInfo.h  Generator.cpp  Generator.h  MainMenu.cpp  MainMenu.h  PostGameScreen.cpp  PostGameScreen.h  SettingsMenu.cpp  SettingsMenu.h  Space.cpp  Space.h  main.cpp
assets/: adjectives_words.txt  animal_words.txt  food_words.txt
